syntax = "proto3";

package com.example.grpc.bank.service;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

service BankAccountService {
  rpc createBankAccount (CreateBankAccountRequest) returns (CreateBankAccountResponse);
  rpc getBankAccountById (GetBankAccountByIdRequest) returns (GetBankAccountByIdResponse);
}

message BankAccount {
  string id = 1;
  string name = 2;
  string email = 3;
  string currency = 4;
  double balance = 5;
}

message CreateBankAccountRequest {
  string name = 1;
  string email = 2;
  string currency = 3;
  double balance = 4;
}

message CreateBankAccountResponse {
  BankAccount bankAccount = 1;
}

message GetBankAccountByIdRequest {
  string id = 1;
}

message GetBankAccountByIdResponse {
  BankAccount bankAccount = 1;
}